# brief_deploy_tf_azure

./: .dockerignore  .env.example  .gitignore  .terraform.lock.hcl  BRIEF.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  main.tf  outputs.tf  pyproject.toml  terraform.tfvars.example  variables.tf
modules/acr/: main.tf  variables.tf
modules/container_app/: main.tf  outputs.tf  variables.tf
modules/container_apps_env/: main.tf  variables.tf
modules/cosmos_postgres/: maint.tf  outputs.tf  variables.tf
modules/log_analytics/: variables.tf
modules/storage/: main.tf  outputs.tf  variables.tf
pipelines/ingestion/: download.py
pipelines/staging/: load_duckdb.py
pipelines/transformation/: __init__.py  transform.py
sql/: create_staging_table.sql  init.sql  insert_to.sql  transformations.sql  truncate.sql
utils/: database.py  download_helper.py  parquet_utils.py
